# django_pdm_temp

./: .env  .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  db.sqlite3  pyproject.toml
apps/viewApp/: apps.py  models.py  serializer.py  urls.py  views.py
apps/viewApp/migrations/: 0001_initial.py
core/: settings.py  urls.py
middleware/: ErrorMiddleware.py
utils/: check_commit_message.py  test_mypy.py
